<resources>
    <string name="app_name">AplicacionAndroid_Calculadora</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnMasMenos">±</string>
    <string name="btnPunto">.</string>
    <string name="btnIgual">=</string>
    <string name="btnSuma">+</string>
    <string name="btnResta">-</string>
    <string name="btnMultiplicacion">X</string>
    <string name="btnDivision">÷</string>
    <string name="btnC">C</string>
    <string name="btnCE">CE</string>
    <string name="btnBorrar">««</string>
    <string name="btnResiduo">%</string>
    <string name="btnRaiz">√</string>
    <string name="btnXalCuadrado">X²</string>
    <string name="btn1sobreX">¹/x</string>
    <string name="btnMC">MC</string>
    <string name="btnMR">MR</string>
    <string name="btnMmas">M+</string>
    <string name="btnMmenos">M-</string>
    <string name="btnMS">MS</string>
    <string name="btnM">M←</string>
</resources>