<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_cero"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_masmenos" />

    <Button
        android:id="@+id/btn_igual"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="36dp"
        android:text="@string/btnIgual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_punto" />

    <Button
        android:id="@+id/btn_uno_sobre_x"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn1sobreX"
        app:layout_constraintBottom_toTopOf="@+id/btn_division"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_division"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:text="@string/btnDivision"
        app:layout_constraintBottom_toTopOf="@+id/btn_multiplicacion"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_multiplicacion"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:text="@string/btnMultiplicacion"
        app:layout_constraintBottom_toTopOf="@+id/btn_resta"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_resta"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:text="@string/btnResta"
        app:layout_constraintBottom_toTopOf="@+id/btn_suma"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_suma"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:text="@string/btnSuma"
        app:layout_constraintBottom_toTopOf="@+id/btn_igual"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_punto"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="40dp"
        android:text="@string/btnPunto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cero" />

    <Button
        android:id="@+id/btn_masmenos"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="41dp"
        android:text="@string/btnMasMenos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_nueve"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="196dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn9"
        app:layout_constraintBottom_toTopOf="@+id/btn_seis"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_tres"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="196dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn3"
        app:layout_constraintBottom_toTopOf="@+id/btn_punto"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_seis"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="196dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn6"
        app:layout_constraintBottom_toTopOf="@+id/btn_tres"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_x_Cuadrada"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="196dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btnXalCuadrado"
        app:layout_constraintBottom_toTopOf="@+id/btn_borrar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_borrar"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="196dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btnBorrar"
        app:layout_constraintBottom_toTopOf="@+id/btn_nueve"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_cinco"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn5"
        app:layout_constraintBottom_toTopOf="@+id/btn_dos"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_raiz"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btnRaiz"
        app:layout_constraintBottom_toTopOf="@+id/btn_c"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_residuo"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="12dp"
        android:text="@string/btnResiduo"
        app:layout_constraintBottom_toTopOf="@+id/button25"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_siete"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn7"
        app:layout_constraintBottom_toTopOf="@+id/btn_cuatro"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_cuatro"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn4"
        app:layout_constraintBottom_toTopOf="@+id/btn_uno"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button25"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnCE"
        app:layout_constraintBottom_toTopOf="@+id/btn_siete"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_c"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btnC"
        app:layout_constraintBottom_toTopOf="@+id/btn_ocho"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_ocho"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn8"
        app:layout_constraintBottom_toTopOf="@+id/btn_cinco"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_dos"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn2"
        app:layout_constraintBottom_toTopOf="@+id/btn_cero"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_uno"
        android:layout_width="71dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn1"
        app:layout_constraintBottom_toTopOf="@+id/btn_masmenos"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_mc"
        android:layout_width="47dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="144dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/btnMC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_mr"
        android:layout_width="47dp"
        android:layout_height="40dp"
        android:layout_marginTop="144dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/btnMR"
        app:layout_constraintStart_toEndOf="@+id/btn_mc"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_mmas2"
        android:layout_width="47dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="144dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/btnMmas"
        app:layout_constraintStart_toEndOf="@+id/btn_mr"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_mmenos"
        android:layout_width="47dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="144dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/btnMmenos"
        app:layout_constraintStart_toEndOf="@+id/btn_mr"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ms"
        android:layout_width="47dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="144dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/btnMS"
        app:layout_constraintStart_toEndOf="@id/btn_cero"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Mall"
        android:layout_width="47dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="144dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/btnM"
        app:layout_constraintStart_toEndOf="@+id/btn_ms"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/caja_operador"
        android:layout_width="331dp"
        android:layout_height="63dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>